tests/paczka1/fuzzy1/27213626.err
Error in line 1: LsLs8 S991 97,77
Error in line 2: A813 A400 52,4
Error in line 12: LsLs8 A813 93,8
Error in line 20: dkD4Y A400 40,4
Error in line 22: dkD4Y S991 9,4
Error in line 23: A813 A400 10,1
Error in line 21: L8RgDb5 S887 1,1
Error in line 24: jRU A400 88,7
